--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <meta charset="UTF-8" />
-  <head>
-    <title>AirBnB Clone</title>
-  </head>
+  <title>AirBnB clone</title>
   <body style="margin: 0px; padding: 0">
-    <header style="background-color: #ff0000; height: 70px; width: 100%"></header>
+    <header
+      style="background-color: #ff0000; height: 70px; width: 100%"
+    ></header>
     <footer
       style="
         text-align: center;
@@ -13,7 +13,7 @@
         height: 60px;
         width: 100%;
         bottom: 0;
-        position: center;
+        position: absolute;
         align-items: center;
         display: flex;
         justify-content: center;
