--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -6,13 +6,21 @@
     <link rel="stylesheet" href="styles/4-common.css" />
     <link rel="stylesheet" href="styles/3-header.css" />
     <link rel="stylesheet" href="styles/3-footer.css" />
-    <link rel="stylesheet" href="styles/4-filters.css" />
+    <link rel="stylesheet" href="styles/5-filters.css" />
     <link rel="icon" href="images/icon.png" />
   </head>
   <body>
     <header></header>
     <div class="container">
       <section class="filters">
+        <div class="locations">
+          <h3>Locations</h3>
+          <h4>Istanbul...</h4>
+        </div>
+        <div class="amenities">
+          <h3>Amenities</h3>
+          <h4>Balcony...</h4>
+        </div>
         <button>Search</button>
       </section>
     </div>
