--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -15,11 +15,11 @@
       <section class="filters">
         <div class="locations">
           <h3>Locations</h3>
-          <h4>Istanbul...</h4>
+          <h4>Istanbul, Ankara...</h4>
         </div>
         <div class="amenities">
           <h3>Amenities</h3>
-          <h4>Balcony...</h4>
+          <h4>Balcony, Kitchen...</h4>
         </div>
         <button>Search</button>
       </section>
