--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Document</title>
+    <title>AirBnB Clone</title>
     <link rel="stylesheet" href="styles/4-common.css" />
     <link rel="stylesheet" href="styles/3-header.css" />
     <link rel="stylesheet" href="styles/3-footer.css" />
