--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/3-header.css" />
     <link rel="stylesheet" href="styles/3-footer.css" />
     <link rel="stylesheet" href="styles/6-filters.css" />
+    <link rel="stylesheet" href="styles/7-places.css" />
     <link rel="icon" href="images/icon.png" />
   </head>
   <body>
@@ -42,6 +43,18 @@
           </div>
         </div>
         <button>Search</button>
+      </section>
+      <section class="places">
+        <h1>Places</h1>
+        <article>
+          <h2>My Home</h2>
+        </article>
+        <article>
+          <h2>Tiny House</h2>
+        </article>
+        <article>
+          <h2>A suit</h2>
+        </article>
       </section>
     </div>
     <footer>Best School</footer>
