--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <meta charset="UTF-8" />
-  <title>AirBnB clone</title>
+  <head>
+    <title>AirBnB clone</title>
+  </head>
   <body style="margin: 0px; padding: 0">
     <header
       style="background-color: #ff0000; height: 70px; width: 100%"
